--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.7",
-    "scrollreveal": "^4.0.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
